--- a/client/package.json
+++ b/client/package.json
@@ -17,10 +17,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^6.1.6",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
     "react-simple-chatbot": "^0.6.1",
+    "react-spring": "^9.7.3",
     "styled-components": "^4.4.1",
     "web-vitals": "^2.1.4"
   },
