--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,8 @@
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
     "react-simple-chatbot": "^0.6.1",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^4.4.1",
     "web-vitals": "^2.1.4"
   },
