--- a/client/package.json
+++ b/client/package.json
@@ -23,9 +23,10 @@
     "react-scroll": "^1.9.0",
     "react-simple-chatbot": "^0.6.1",
     "react-slick": "^0.30.2",
-    "slick-carousel": "^1.8.1",
     "react-spring": "^9.7.3",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^4.4.1",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
